--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -90,7 +90,7 @@
 	<!-- Adding Contacts -->
 	<string name="add_contact_title">Add a Contact</string>
 	<string name="your_nickname">Choose the identity you want to use:</string>
-	<string name="face_to_face">You must be face-to-face with the person you want to add as a contact. This will prevent anyone from impersonating you or reading your messages in future.</string>
+	<string name="face_to_face">You must meet up with the person you want to add as a contact.\n\nThis will prevent anyone from impersonating you or reading your messages in future.</string>
 	<string name="continue_button">Continue</string>
 	<string name="your_invitation_code">Your invitation code is</string>
 	<string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
@@ -104,6 +104,7 @@
 	<string name="your_confirmation_code">Your confirmation code is</string>
 	<string name="enter_confirmation_code">Please enter your contact\'s confirmation code:</string>
 	<string name="waiting_for_contact">Waiting for contact\u2026</string>
+	<string name="waiting_for_contact_to_scan">Waiting for contact to scan and connect\u2026</string>
 	<string name="exchanging_contact_details">Exchanging contact details\u2026</string>
 	<string name="codes_do_not_match">Codes do not match</string>
 	<string name="interfering">This could mean that someone is trying to interfere with your connection</string>
